--- a/src/app/components/TechList.module.css
+++ b/src/app/components/TechList.module.css
@@ -25,6 +25,6 @@
 
 .iconBox:hover .iconTooltip {
   visibility: visible;
-  color: white;
+  color: var(--light-primary);
   background-color: black;
 }
