--- a/src/app/components/About.module.css
+++ b/src/app/components/About.module.css
@@ -10,7 +10,7 @@
   left: 50%;
   width: 300px;
   height: 300px;
-  border: 3px solid red;
+  border: 5px solid var(--accent-color);
   border-radius: 50%;
   transform: translateX(-50%);
   object-fit: cover;
