--- a/src/app/components/NavMenu.module.css
+++ b/src/app/components/NavMenu.module.css
@@ -1,6 +1,6 @@
 .navMenu {
   position: fixed;
-  z-index: 10;
+  z-index: 11;
   height: 100vh;
   width: 400px;
   padding: 25px 25px;
@@ -8,7 +8,7 @@
 }
 
 .menuButton {
-  color: white;
+  color: var(--light-primary);
   pointer-events: all;
   padding: 20px;
 }
@@ -23,7 +23,7 @@
   height: 64px;
   overflow: hidden;
   /* padding: 20px; */
-  box-shadow: 0 0 15px 20px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 15px 10px rgba(0, 0, 0, 0.1);
   background: linear-gradient(to right, #27212c, #473c50);
   border-radius: 40px;
   transition: all 0.3s;
@@ -48,11 +48,11 @@
   white-space: nowrap;
   padding: 30px 20px;
   transition: border 0.1s;
-  border-right: 0px solid red;
+  border-right: 0px solid var(--accent-color);
 }
 
 .listItemLink:hover {
-  border-right: 8px solid red;
+  border-right: 8px solid var(--accent-color);
 }
 
 .listItemIcon {
@@ -65,7 +65,7 @@
     transform: translateX(-200%);
   }
   100% {
-    color: white;
+    color: var(--light-primary);
     transform: translateX(0%);
   }
 }
