--- a/src/app/components/Pacman.module.css
+++ b/src/app/components/Pacman.module.css
@@ -5,6 +5,8 @@
   top: 0;
   left: 0;
   touch-action: none;
+  /* border: 1px solid red; */
+  cursor: none;
 }
 
 .score {
@@ -12,11 +14,21 @@
   left: 100%;
   transform: translateX(-100%);
   position: absolute;
-  color: #444;
+  color: var(--light-primary);
   font-family: sans-serif;
   font-size: 1.5rem;
   padding: 10px;
   text-align: right;
+}
+
+.svgItem {
+  width: 100%;
+  height: 100%;
+  visibility: hidden;
+}
+
+.container:hover .svgItem {
+  visibility: visible;
 }
 
 .spaceShip {
@@ -35,29 +47,30 @@
 .spaceShip img {
   width: 100%;
   height: 100%;
+  fill: red;
   /* rotate: 45deg; */
 }
 
 .dottedLine {
-  stroke: #444;
+  stroke: var(--accent-color-pacman);
   fill: none;
   stroke-width: 3;
 }
 
 .outerCircle {
   fill: none;
-  stroke: #444;
+  stroke: var(--accent-color-pacman);
   stroke-width: 3;
 }
 
 .innerCircle {
   fill: none;
-  stroke: #444;
+  stroke: var(--accent-color-pacman);
   stroke-width: 3;
 }
 
 .pellet {
-  fill: #444;
-  stroke: #444;
+  fill: var(--accent-color-pacman);
+  stroke: black;
   stroke-width: 3;
 }
