--- a/src/app/components/NavMenu.module.css
+++ b/src/app/components/NavMenu.module.css
@@ -24,7 +24,7 @@
   overflow: hidden;
   /* padding: 20px; */
   box-shadow: 0 0 15px 10px rgba(0, 0, 0, 0.1);
-  background: linear-gradient(to right, #27212c, #473c50);
+  background: linear-gradient(to right, #1b171e, #322b39);
   border-radius: 40px;
   transition: all 0.3s;
   pointer-events: all;
