--- a/src/app/components/Contact.module.css
+++ b/src/app/components/Contact.module.css
@@ -29,6 +29,19 @@
   margin-top: 30px;
 }
 
+.title {
+  font-size: 2rem;
+  font-weight: 300;
+  text-align: center;
+  margin-top: -2rem;
+  margin-bottom: 80px;
+}
+
+.flexFields {
+  display: flex;
+  gap: 50px;
+}
+
 .inputLabel,
 .inputField {
   display: block;
@@ -45,6 +58,10 @@
   border-radius: 5px;
   margin-bottom: 30px;
   color: #27212c;
+}
+
+.inputField:focus {
+  outline: 3px solid var(--accent-color);
 }
 
 .textArea {
@@ -73,5 +90,9 @@
 @media screen and (max-width: 1000px) {
   .informationHeader {
     font-size: 24px;
+  }
+
+  .flexFields {
+    display: block;
   }
 }
