--- a/src/app/components/PreviewBox.module.css
+++ b/src/app/components/PreviewBox.module.css
@@ -12,23 +12,15 @@
   transform: scale(1.05);
 }
 
-.previewBox::after {
+/* .previewBox::after {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
   height: 100%;
   width: 100%;
-  background: linear-gradient(
-    to right,
-    rgba(0, 0, 0, 0.3) 0%,
-    rgba(255, 255, 255, 0.1) 40%,
-    rgba(255, 255, 255, 0.1) 60%,
-    rgba(0, 0, 0, 0.3) 100%
-  );
-
   pointer-events: none;
-}
+} */
 
 .image {
   margin: 0 auto;
